--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -21,6 +21,6 @@ test:
 about:
   home: https://github.com/rapidsai/gpuci-tools
   license: Apache-2.0
-  license_file: LICENSE
+  license_file: ../../LICENSE
   summary: 'User tools for use within the gpuCI environment'
   dev_url: https://github.com/rapidsai/gpuci-tools
