ENH Require mamba for gpuci-tools conda instal

--- a/conda/recipe/meta.yaml
+++ b/conda/recipe/meta.yaml
@@ -13,6 +13,10 @@ source:
 build:
   number: {{ git_revision_count }}
 
+requirements:
+  run:
+    - mamba::conda-forge
+
 test:
   commands:
     - gpuci_logger "test"
